

========================== convert_DO() ============================
- NEW: Added support for % oxygen saturation ('%O2') units. % air saturation is now '%Air' and the previous '%' operator for this has been deprecated.
- CHANGE: Removed ability to accept objects of class `calc_rate`, `auto_rate` or `adjust_rate`. This didn't make any sense in this function as rates are not a DO measure!
- CHANGE: Added warning for 'P' atmospheric pressure values being outside realistic range
- FIX: Fix for error with non-numeric x inputs


========================== unit_args() ============================
- NEW: Updated for new units (time in days, oxygen in mol, %O2) and more detail of which functions accept which units
- NEW: Updated with units for flowrates


========================== adjust_rate() ============================
- NEW: completely rewritten to allow several new methods, including dynamic background correction
- (same original inputs (x, by) plus five new ones. Method defaults to "mean" so old code should output same results as it did before)
- CHANGE: output: `corrected` changed to `rate.adjusted`
- CHANGE: output: `input.rate` changed to `rate.input`
- FIX: summary() works correctly on `adjust_rate` objects (missing #' @export)


========================== subsample() ============================
- NEW: Now works on vectors as well as data frames
- NEW: Added 'length.out' argument which uniformly subsamples to exact number of rows (data frame) or length (vectors)
- FIX: Now works and plots correctly (first data column only) with multicolumn data frames


========================== calc_rate() ============================
- NEW: plot updated with title showing which Rank current plot is, and better spacing
- NEW: now calculates from start of the data if 'from' is NULL, and to the end of the data if `to` is NULL.
- CHANGE: Detects and warns if multi-column input (matches auto_rate behaviour)
- CHANGE: added a bunch of new input checks